--- a/pingoverso/backend/package.json
+++ b/pingoverso/backend/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "pingoverso",
+  "name": "pingoverso-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "socket.io": "^4.7.1"
   }
 }
